--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
     "handlebars": "^4.1.2",
     "hbs": "^4.0.4",
+    "md5": "^2.2.1",
     "mongodb": "^3.2.3"
   }
 }
